# lasso

./: pyproject.toml  requirements.txt
.github/workflows/: ci.yml
golden_model/: codebook.py  kve.py  lacu.py  mhc.py  tiu.py
lasso_research/: paper_findings.jsonl  program.md  results.tsv
sim/: autoresearch_loop.py  logger.py  run_all.py  sweep_benchmark.py  sweep_kve.py  sweep_lacu.py  sweep_mhc.py  sweep_overnight.py  sweep_tiu.py
sim/results/: benchmark_report.json  findings.jsonl  findings_overnight.jsonl  summary.md
tests/: conftest.py  test_integration.py  test_kve.py  test_lacu.py  test_mhc.py  test_tiu.py
writing_outputs/: autoresearch_notes.json  autoresearch_paper_section.tex  benchmark_notes.json  lasso.bib  lasso_paper.bbl  lasso_paper.tex  literature_review.json
