[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:SetupToolsBackend"

[project]
name = "lasso-verification"
version = "0.1.0"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
